Fix form overflow

--- a/styles.css
+++ b/styles.css
@@ -142,7 +142,7 @@ input:checked + .slider::before{
     padding: 3.2em;
 
     border-radius: 8px;
-    
+    overflow-y: auto;
     z-index: -1; 
     opacity: 0; 
     pointer-events: none;
